Реализует верстку и логику стриныцы входа и верстку страницы регистрации.

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,1 +1,9 @@
-<p>auth work</p>
+<div class="container">
+  <mat-card style="width: 50%; margin: 0 auto;">
+    <router-outlet></router-outlet>
+  </mat-card>
+</div>
+
+
+
+
